# DosificadorV2

./: CMakeLists.txt
components/consumo_data/: CMakeLists.txt  consumo_data.c  consumo_data.h
components/consumo_endpoints/: CMakeLists.txt  consumo_endpoints.c  consumo_endpoints.h
components/envio_data/: CMakeLists.txt  envio_data.c  envio_data.h
components/hx711_comp/: CMakeLists.txt  hx711_comp.c  hx711_comp.h
components/led_handle/: CMakeLists.txt  led_handle.h
components/motorDC/: CMakeLists.txt  motorDC.c  motorDC.h
components/parse_endpoints/: CMakeLists.txt  parse_endpoints.c  parse_endpoints.h
components/servidor/: CMakeLists.txt  servidor.c  servidor.h
components/servo/: CMakeLists.txt
components/ultra/: CMakeLists.txt  ultra.c  ultra.h
components/variables_globales/: CMakeLists.txt  variables_globales.c  variables_globales.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h  wifi_connect_err.c
main/: CMakeLists.txt  main.c
